--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 
 env:
     DOCKER_REPOSITORY_DATADOG_URI: 574137177783.dkr.ecr.eu-west-1.amazonaws.com/devops
+    DATADOG_API_KEY: "DD_API_KEY=${{secrets.DD_API_KEY_SANDBOX}}"
 jobs:
     download-s3:
         runs-on: ubuntu-latest
@@ -28,7 +29,7 @@ jobs:
               uses: aws-actions/amazon-ecr-login@v1
 
             - name: Build image with the datadog agent
-              run: docker build -f ./docker/datadog/Dockerfile -t datadog --build-arg "DD_API_KEY=${{secrets.DD_API_KEY_SANDBOX}}" .
+              run: docker build -f ./docker/datadog/Dockerfile -t datadog --build-arg ${{env.DATADOG_API_KEY}} .
 
             - name: Push image with the datadog agent to Docker registry
               run: |
