--- a/docker/datadog/Dockerfile
+++ b/docker/datadog/Dockerfile
@@ -1,8 +1,8 @@
 FROM datadog/agent:7
 ARG DD_API_KEY
 ARG DD_ENV
-ARG BLUE_GREEN_ENV
+ARG DD_TAGS
 
 ENV DD_API_KEY $DD_API_KEY
 ENV DD_ENV $DD_ENV
-ENV BLUE_GREEN_ENV $BLUE_GREEN_ENV
+ENV DD_TAGS $DD_TAGS
