--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,10 @@ jobs:
               shell: bash
 
             - name: Set Datadog env
-              run: echo "DATADOG_ENV=$(awk -F '=' '/APP_ENV=/{print $2}' .env)" >> $GITHUB_ENV
+              run: echo "APP_ENV=$(awk -F '=' '/APP_ENV=/{print $2}' .env)" >> $GITHUB_ENV
 
             - name: Set Datadog Blue Green env
-              run: echo "DATADOG_TAGS=$(awk -F '=' '/BLUE_GREEN_ENV=/{print $2}' .env)" >> $GITHUB_ENV
+              run: echo "BLUE_GREEN_ENV=$(awk -F '=' '/BLUE_GREEN_ENV=/{print $2}' .env)" >> $GITHUB_ENV
 
             - name: Test Datadog env
               run: echo $DATADOG_ENV
@@ -49,7 +49,7 @@ jobs:
               run: echo $DATADOG_TAGS
 
             - name: Build image with the datadog agent
-              run: docker build -f ./docker/datadog/Dockerfile -t datadog --build-arg DD_API_KEY=${{ env.DATADOG_API_KEY }} --build-arg DD_ENV=${{ env.DATADOG_ENV }} --build-arg DD_TAGS=blue_green_env:${{ env.DATADOG_TAGS }} .
+              run: docker build -f ./docker/datadog/Dockerfile -t datadog --build-arg DD_API_KEY=${{ env.DATADOG_API_KEY }} --build-arg DD_ENV=${{ env.APP_ENV }} --build-arg DD_TAGS=blue_green_env:${{ env.BLUE_GREEN_ENV }} .
 
             - name: Push image with the datadog agent to Docker registry
               run: |
