fixed config path

--- a/docker/datadog/Dockerfile
+++ b/docker/datadog/Dockerfile
@@ -5,4 +5,4 @@ ARG DD_ENV
 ENV DD_API_KEY $DD_API_KEY
 ENV DD_ENV $DD_ENV
 
-COPY ./conf.yml /etc/datadog-agent/conf.d/disk.d/conf.yaml
+COPY conf.yml /etc/datadog-agent/conf.d/disk.d/conf.yml
