--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -95,6 +95,7 @@ services:
       - "/var/lib/docker/containers:/var/lib/docker/containers:ro"
       - "/proc/:/host/proc/:ro"
       - "/sys/fs/cgroup/:/host/sys/fs/cgroup:ro"
+      - "/var/lib/cloud/data/:/var/lib/cloud/data/"
       - "datadogconf:/opt/datadog-agent/run"
     networks:
       - backend
