--- a/docker/datadog/datadog.yaml
+++ b/docker/datadog/datadog.yaml
@@ -7,11 +7,8 @@ apm_config:
 # Use java container support
 jmx_use_container_support: true
 
-# Set empty hostname
-hostname: ""
-
 # allow configuration-provided hostname starting with ip- or domu
 hostname_force_config_as_canonical: true
 
 # Use hostname from file
-hostname_file: /var/lib/cloud/data/previous-hostname
+#hostname_file: /var/lib/cloud/data/previous-hostname
