--- a/docker/datadog/datadog.yaml
+++ b/docker/datadog/datadog.yaml
@@ -8,7 +8,7 @@ apm_config:
 jmx_use_container_support: true
 
 # allow configuration-provided hostname starting with ip- or domu
-hostname_force_config_as_canonical: true
+#hostname_force_config_as_canonical: true
 
 # Use hostname from file
-hostname_file: /var/lib/cloud/data/fake-hostname
+#hostname_file: /var/lib/cloud/data/fake-hostname
