--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
                 SLACK_ICON_EMOJI: ':rocket:'
-                SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}:pencil2:'
+                SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
                 SLACK_USERNAME: Deploy
 
