--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
                 SLACK_ICON_EMOJI: ':rocket:'
                 SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
-                SLACK_USERNAME: Deploy
+                SLACK_USERNAME: Deploy Started
 
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v1
@@ -85,4 +85,27 @@ jobs:
                 docker tag datadog:latest ${{ env.DOCKER_REPOSITORY_DATADOG_URI }}
                 docker tag ${{ env.DOCKER_REPOSITORY_DATADOG_URI }}:latest ${{ env.DOCKER_REPOSITORY_DATADOG_URI }}:blue
                 docker push ${{ env.DOCKER_REPOSITORY_DATADOG_URI }}:blue
-          
+
+            - name: Slack Notification Success
+              uses: rtCamp/action-slack-notify@v2
+              if: success()
+              env:
+                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+                SLACK_CHANNEL: deployment
+                SLACK_COLOR: ${{ job.status }}
+                SLACK_ICON_EMOJI: ':checkered_flag:'
+                #SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
+                SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
+                SLACK_USERNAME: 'Deploy Successfully Completed :tada:'
+
+            - name: Slack Notification
+              uses: rtCamp/action-slack-notify@v2
+              if: failure()
+              env:
+                SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+                SLACK_CHANNEL: deployment
+                SLACK_COLOR: ${{ job.status }}
+                SLACK_ICON_EMOJI: ':fire:'
+                #SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
+                SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
+                SLACK_USERNAME: 'Deploy Failure :no_entry:'
