--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Docker CI/CD Deployment
+name: Stage. CI/CD with Blue/Green Deployment
 run-name: ${{ github.actor }} is running GitHub Actions 🚀
 
 on:
@@ -25,7 +25,7 @@ on:
         #- main
 
 env:
-    #DOCKER_REPOSITORY_DATADOG_URI: 574137177783.dkr.ecr.eu-west-1.amazonaws.com/devops
+    DOCKER_REPOSITORY_DATADOG_URI: 574137177783.dkr.ecr.eu-west-1.amazonaws.com/devops
     ENV_FILE: ${{ secrets.SANDBOX_ENV_FILE }}
     DATADOG_API_KEY: ${{ secrets.DD_API_KEY_SANDBOX }}
 jobs:
@@ -96,7 +96,7 @@ jobs:
                 SLACK_ICON_EMOJI: ':checkered_flag:'
                 #SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
-                SLACK_USERNAME: 'Deploy Successfully Completed :tada:'
+                SLACK_USERNAME: 'Deploy Successfully Completed'
 
             - name: Slack Notification Failure
               uses: rtCamp/action-slack-notify@v2
