--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
+                SLACK_FOOTER: 'Powered By SellerAmp'
                 SLACK_ICON_EMOJI: ':rocket:'
                 SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
@@ -93,6 +94,7 @@ jobs:
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
+                SLACK_FOOTER: 'Powered By SellerAmp'
                 SLACK_ICON_EMOJI: ':checkered_flag:'
                 #SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
@@ -105,6 +107,7 @@ jobs:
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
+                SLACK_FOOTER: 'Powered By SellerAmp'
                 SLACK_ICON_EMOJI: ':fire:'
                 #SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
