--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,24 @@ env:
     DOCKER_REPOSITORY_DATADOG_URI: 574137177783.dkr.ecr.eu-west-1.amazonaws.com/devops
     ENV_FILE: ${{ secrets.SANDBOX_ENV_FILE }}
     DATADOG_API_KEY: ${{ secrets.DD_API_KEY_SANDBOX }}
+    GIT_BRANCH: main
+
 jobs:
     build:
         runs-on: ubuntu-latest
         name: Build Docker image
         steps:
-            - name: Checkout
-              uses: actions/checkout@v2
+            - name: Checkout Repository
+              uses: actions/checkout@v4
+              with:
+                ref: ${{ env.GIT_BRANCH }}
+              if: github.event.inputs.git-ref == ''
+
+            - name: Checkout Repository (Custom Git Reference)
+              uses: actions/checkout@v4
+              with:
+                ref: ${{ github.event.inputs.git-ref }}
+              if: github.event.inputs.git-ref != ''
 
             - name: Slack Notification
               uses: rtCamp/action-slack-notify@v2
