--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,12 @@ jobs:
                 ref: ${{ github.event.inputs.git-ref }}
               if: github.event.inputs.git-ref != ''
 
+            - name: 'Get message'
+              id: 'deploy-message'
+              run: |
+                    echo "::set-output name=commit_msg::$(git log -1 --format=%B)"
+                    echo "::set-output name=commit_sha::$(git log -1 --format=%H)"
+
             - name: Slack Notification
               uses: rtCamp/action-slack-notify@v2
               env:
@@ -55,7 +61,7 @@ jobs:
                 SLACK_COLOR: ${{ job.status }}
                 SLACK_FOOTER: 'Powered By SellerAmp'
                 SLACK_ICON_EMOJI: ':rocket:'
-                SLACK_MESSAGE: '${{ github.event.workflow_run.head_commit.message }}'
+                SLACK_MESSAGE: ${{ steps.deploy-message.outputs.commit_msg }}
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
                 SLACK_USERNAME: Deploy Started
 
