--- a/.github/workflows/slack_message.yml
+++ b/.github/workflows/slack_message.yml
@@ -57,6 +57,7 @@ jobs:
             - name: Slack Notification
               uses: rtCamp/action-slack-notify@v2
               env:
+                MSG_MINIMAL: true
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
