--- a/.github/workflows/slack_message.yml
+++ b/.github/workflows/slack_message.yml
@@ -57,13 +57,14 @@ jobs:
             - name: Slack Notification
               uses: rtCamp/action-slack-notify@v2
               env:
-                MSG_MINIMAL: true
                 SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
                 SLACK_FOOTER: 'Powered By SellerAmp'
+                MSG_MINIMAL: true
                 SLACK_ICON_EMOJI: ':rocket:'
                 SLACK_MESSAGE: |
+                    ${{ steps.deploy-message.outputs.commit_msg }}
                     See details: <${{ env.REPO_URL }}/commit/${{ github.sha }}|(Commit)> <${{ env.REPO_URL }}/actions/runs/${{ github.run_id }}|(Action run)>
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
                 SLACK_USERNAME: Deploy Started
@@ -106,6 +107,7 @@ jobs:
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
                 SLACK_FOOTER: 'Powered By SellerAmp'
+                MSG_MINIMAL: true
                 SLACK_ICON_EMOJI: ':checkered_flag:'
                 SLACK_MESSAGE: ${{ steps.deploy-message.outputs.commit_msg }}
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
@@ -119,6 +121,7 @@ jobs:
                 SLACK_CHANNEL: deployment
                 SLACK_COLOR: ${{ job.status }}
                 SLACK_FOOTER: 'Powered By SellerAmp'
+                MSG_MINIMAL: true
                 SLACK_ICON_EMOJI: ':fire:'
                 SLACK_MESSAGE: ${{ steps.deploy-message.outputs.commit_msg }}
                 SLACK_TITLE: 'Deploy ${{ inputs.git-ref }} to ${{ inputs.deployment-env }} by ${{ github.actor }} 🚀'
