--- a/.github/workflows/slack_message.yml
+++ b/.github/workflows/slack_message.yml
@@ -61,9 +61,10 @@ jobs:
               run: sed -i~ '/^Jira_Release_ID=/s/=.*/=${{inputs.jira-id}}/' .env
 
             - name: set short commit
+              id: git-hash
               run: |
-                SHORT_GIT_HASH=$(git rev-parse --short HEAD)
-                sed -i~ '/^SHORT_GIT_HASH=/s/=.*/=$SHORT_GIT_HASH/' .env
+                echo "short_git_hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+                sed -i~ '/^SHORT_GIT_HASH=/s/=.*/=${{steps.git-hash.outputs.short_git_hash}}/' .env
               shell: bash
 
             - name: test short commit
