--- a/.github/workflows/slack_message.yml
+++ b/.github/workflows/slack_message.yml
@@ -69,7 +69,14 @@ jobs:
 
             - name: test short commit
               run: echo $SHORT_GIT_HASH
-          
+
+            - name: set app version in .env file
+              run: |
+                APP_VERSION=`./generate_version.sh`
+                APP_VERSION=$(echo "$APP_VERSION" | sed 's/\//\\\//g')
+                sed -ri~ "/^APP_VERSION=/s/=.*/=$APP_VERSION/" .env
+              shell: bash
+
             - name: test .env
               run: cat .env
           
