--- a/.github/workflows/slack_message.yml
+++ b/.github/workflows/slack_message.yml
@@ -38,12 +38,14 @@ jobs:
             - name: Checkout Repository
               uses: actions/checkout@v4
               with:
+                fetch-depth: 0
                 ref: ${{ env.GIT_BRANCH }}
               if: github.event.inputs.git-ref == ''
 
             - name: Checkout Repository (Custom Git Reference)
               uses: actions/checkout@v4
               with:
+                fetch-depth: 0
                 ref: ${{ github.event.inputs.git-ref }}
               if: github.event.inputs.git-ref != ''
 
