--- a/.github/workflows/slack_message.yml
+++ b/.github/workflows/slack_message.yml
@@ -71,7 +71,7 @@ jobs:
 
             - name: set app version in .env file
               run: |
-                APP_VERSION=`./generate_version.sh -p`
+                APP_VERSION=`./generate_version.sh`
                 APP_VERSION=$(echo "$APP_VERSION" | sed 's/\//\\\//g')
                 sed -ri~ "/^APP_VERSION=/s/=.*/=$APP_VERSION/" .env
               shell: bash
